# dispatch_benchmark

./: .gitignore  README.md  README_benchmark.md  Report.md  download_ercot.py  download_nyiso.py  pyproject.toml  requirements.txt
benchmarks/: README.md  comprehensive_benchmark.py  run_all_benchmarks.sh  run_benchmark.sh  run_ercot_benchmark.sh  run_nyiso_benchmark.sh  summarize_benchmarks.py
benchmarks/legacy/: compare_forecasters.py  naive_benchmark.py  naive_forecaster_summary.py
benchmarks/results.bak/ercot/: 7RNCHSLR_ALL_results.json  AEEC_results.json  AGUAYO_UNIT1_results.json  AJAXWIND_RN_results.json  ALGOD_ALL_RN_results.json  ALVIN_RN_results.json  AMADEUS_ALL_results.json  AMISTAD_ALL_results.json  AMOCOOIL_CC1_results.json  AMOCOOIL_CC2_results.json  AMOCO_PUN1_results.json  AMOCO_PUN2_results.json  AMO_AMOCO_1_results.json  AMO_AMOCO_2_results.json  AMO_AMOCO_5_results.json  AMO_AMOCO_G1_results.json  AMO_AMOCO_G2_results.json  AMO_AMOCO_G3_results.json  AMO_AMOCO_S1_results.json  AMO_AMOCO_S2_results.json  ANACACHO_ANA_results.json  ANCHOR_ALL_results.json  ANDMDSLR_ALL_results.json  ANG_ALL_results.json  ANSON1_ALL_results.json  APPALOSA_ALL_results.json  AQUI_ALL_results.json  ARAGORN_RN_results.json  ASTRA_RN_results.json  ATK_ATKINSG7_results.json  AUSTPL_ALL_results.json  AVIAT_ALL_results.json  AZURE_RN_results.json  AZ_ALL_results.json  BAC_RN_ALL_results.json  BAFFIN_ALL_results.json  BAIRDWND_ALL_results.json  BARROW_ALL_results.json  BASTEN_CC1_results.json  BASTEN_CCU_results.json  (+61 more)
benchmarks/results.bak/nyiso/: CAPITL_results.json  CENTRL_results.json  DUNWOD_results.json  GENESE_results.json  H Q_results.json  HUD VL_results.json  LONGIL_results.json  MHK VL_results.json  MILLWD_results.json  N.Y.C._results.json  NORTH_results.json  NPX_results.json  O H_results.json  PJM_results.json  WEST_results.json  combined_results.json
benchmarks/results/ercot/: 7RNCHSLR_ALL_results.json  AEEC_results.json  AGUAYO_UNIT1_results.json  AJAXWIND_RN_results.json  ALGOD_ALL_RN_results.json  ALVIN_RN_results.json  AMADEUS_ALL_results.json  AMISTAD_ALL_results.json  AMOCOOIL_CC1_results.json  AMOCOOIL_CC2_results.json  AMOCO_PUN1_results.json  AMOCO_PUN2_results.json  AMO_AMOCO_1_results.json  AMO_AMOCO_2_results.json  AMO_AMOCO_5_results.json  AMO_AMOCO_G1_results.json  AMO_AMOCO_G2_results.json  AMO_AMOCO_G3_results.json  AMO_AMOCO_S1_results.json  AMO_AMOCO_S2_results.json  ANACACHO_ANA_results.json  ANCHOR_ALL_results.json  ANDMDSLR_ALL_results.json  ANG_ALL_results.json  ANSON1_ALL_results.json  APPALOSA_ALL_results.json  AQUI_ALL_results.json  ARAGORN_RN_results.json  ASTRA_RN_results.json  ATK_ATKINSG7_results.json  AUSTPL_ALL_results.json  AVIAT_ALL_results.json  AZURE_RN_results.json  AZ_ALL_results.json  BAC_RN_ALL_results.json  BAFFIN_ALL_results.json  BAIRDWND_ALL_results.json  BARROW_ALL_results.json  BASTEN_CC1_results.json  BASTEN_CCU_results.json  (+61 more)
benchmarks/results/nyiso/: CAPITL_results.json  CENTRL_results.json  DUNWOD_results.json  GENESE_results.json  H Q_results.json  HUD VL_results.json  LONGIL_results.json  MHK VL_results.json  MILLWD_results.json  N.Y.C._results.json  NORTH_results.json  NPX_results.json  O H_results.json  PJM_results.json  WEST_results.json
src/: README.md
src/dispatch_benchmark/: config.py
src/dispatch_benchmark/cli/: ercot_cli.py  nyiso_cli.py
src/dispatch_benchmark/data_processing/: __init__.py  nyiso.py
src/dispatch_benchmark/forecasters/: naive.py  quartile.py  river.py
src/dispatch_benchmark/io/: ercot.py
src/dispatch_benchmark/models/: __init__.py  benchmark.py  online_mpc.py  online_q.py  online_quartile.py  online_river.py  oracle_lp.py  oracle_mpc.py
src/dispatch_benchmark/optimisers/: __init__.py  battery_config.py  benchmark.py  online_mpc.py  oracle_lp.py  oracle_mpc.py
src/dispatch_benchmark/utils/: __init__.py  concatenate_json.py  timing.py
src/dispatch_benchmark/visualization/: results.py
src/virtual_energy/: __init__.py  config.py
src/virtual_energy/cli/: ercot_cli.py  nyiso_cli.py
src/virtual_energy/data_processing/: ercot.py
src/virtual_energy/forecasters/: __init__.py  quartile.py  ridge.py  river.py
src/virtual_energy/io/: __init__.py  nyiso.py
src/virtual_energy/models/: benchmark.py  config.py  model_config.py  online_mpc.py  online_q.py  online_quartile.py  online_river.py  oracle_lp.py  oracle_mpc.py
src/virtual_energy/optimisers/: benchmark.py  online_mpc.py  oracle_lp.py  oracle_mpc.py
src/virtual_energy/utils/: __init__.py  (+2 more)
tests/: conftest.py  sample_nodes.yaml  test_battery_models.py  test_cli.py  test_cli_e2e.py  test_cli_simple.py  test_cli_single_node.py  test_data_loader.py  test_import.py  test_loader_roundtrip.py  test_simple.py  test_soc_invariant.py  test_time_series.py  test_walk_forward_split.py
(+26 files in other folders)
